working on multiple functions - Factories set up - Check the state of the game (who won/draw/nothing)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </head>
 
     <body>
+        <div id="container">
+            <h1>Tic Tac Toe</h1>
+            <div id="gameboard"></div>
+        </div>
         <script src="scripts/script1.js"></script>
+        <script src="scripts/run.js"></script>
     </body>
 </html>
