main functionalities implemented - Game working normally - basic structure with buttons and result field created - need fix with reset function

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <body>
         <div id="container">
             <h1>Tic Tac Toe</h1>
+            <div>
+                <label for="playerXfield">Player X</label>
+                <input type="text" placeholder="Enter name" id="playerXfield">
+                <label for="playerYfield">Player Y</label>
+                <input type="text" placeholder="Enter name" id="playerYfield">
+                <button id="startGameBtn">Start Game</button>
+                <button id="resetGameBtn">reset</button>
+            </div>
             <div id="gameboard"></div>
+            <div id="result"></div>
         </div>
         <script src="scripts/script1.js"></script>
         <script src="scripts/run.js"></script>
